[package]
name = "binder"
version = "0.1.0"
edition = "2021"

[dependencies]
object = "0.32"
ntapi = "0.4"
winapi = { version = "0.3.9", features = [
    "processthreadsapi",
    "winbase",
    "memoryapi",
    "winnt",
    "ntdef"
] }

[build-dependencies]
object = { version = "0.32", features = ["write"] }
rand = "0.8"
